# Blueprint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  versioning.yml
src/: main.py
src/blprint/modules/blueprints/: colect_blueprint_values.py  format_blueprint_variables.py  get_all_blueprint_codes.py  get_blue_print_variables.py  instantiate_blueprint.py
src/blprint/modules/blueprints/commands/create/: create_command.py
src/modules/blueprints/: get_blue_print_variables.py  instantiate_blueprint.py
src/modules/blueprints/commands/create/: create_command.py
