[tool.poetry]
name = "blprint"
version = "0.1.8.1"
description = "A simple scaffolding cli"
authors = ["Mateus Gurgel <mateusgurgel15@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.20.0"
jinja2 = "^3.1.5"
stringcase = "^1.2.0"

[tool.poetry.scripts]
blueprint = "blprint.main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
mypy = "^1.18.2"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
